--- a/style.css
+++ b/style.css
@@ -34,6 +34,12 @@ body {
 .rounded_3 {
   border-radius: 1rem;
 }
+.text_blue {
+  color: #0776cf;
+}
+.border_b {
+  border-bottom: 1px solid #0776cf;
+}
 /* Header */
 
 /* Main */
