--- a/style.css
+++ b/style.css
@@ -21,6 +21,12 @@ body {
 .pt_7 {
   padding-top: 4rem;
 }
+.py_6 {
+  padding: 5rem 0;
+}
+.pb_6 {
+  padding-bottom: 5rem;
+}
 .btn_dark {
   background-color: #363636;
 }
