--- a/Bonus/style.css
+++ b/Bonus/style.css
@@ -59,10 +59,12 @@ body {
   text-align: right;
 }
 a.nav-link.active,
-.nav-item .btn {
+.nav-item .btn,
+.btn_transition .btn {
   transition: all 0.2s;
 }
-a.nav-link.active:hover {
+a.nav-link.active:hover,
+.nav-item .btn:hover {
   color: #0776cf !important;
   cursor: pointer;
 }
@@ -86,6 +88,17 @@ a.nav-link.active:hover {
 }
 .logo_takes {
   height: 150px;
+}
+.btn_transition {
+  background-color: #cd3d0f;
+  border-radius: 50rem;
+  width: 8rem;
+  padding: 0.25rem;
+  text-align: center;
+}
+.btn_transition .btn:hover {
+  border: 1px solid #000;
+  color: #fff;
 }
 /* new games */
 .new_games,
