add transition on hover section explore

--- a/Bonus/style.css
+++ b/Bonus/style.css
@@ -138,6 +138,9 @@ i.far.fa-registered {
   vertical-align: super;
   font-size: 1rem;
 }
+.explore .btn_transition_blue {
+  width: 8rem;
+}
 /* plus */
 .plus {
   background-color: #bebcbb;
